style(invoice): enhance total row with improved styling and hover effects
- Update the total row in the invoice section to feature a gradient background and enhanced typography for better visibility.
- Implement hover effects to improve user interaction, changing background and text colors dynamically.
- Refine layout and styling for a more modern and engaging user experience.

--- a/newInvoice.html
+++ b/newInvoice.html
@@ -395,9 +395,32 @@
               </div>
             </td>
           </tr>
-          <tr class="total-row">
-            <td>Total</td>
-            <td class="right amount">--</td>
+          <tr class="total-row" style="
+            background: linear-gradient(135deg, #4f46e5 0%, #4338ca 100%);
+            border-top: 2px solid #4f46e5;
+            margin-top: 0.5rem;
+            transition: all 0.3s ease;
+            cursor: pointer;
+          " onmouseover="this.style.background='linear-gradient(135deg, #f8fafc 0%, #f1f5f9 100%)'; this.querySelector('.total-label').style.color='#1e293b'; this.querySelector('.total-amount').style.color='#4f46e5';" 
+             onmouseout="this.style.background='linear-gradient(135deg, #4f46e5 0%, #4338ca 100%)'; this.querySelector('.total-label').style.color='white'; this.querySelector('.total-amount').style.color='white';">
+            <td style="
+              font-weight: 600;
+              font-size: 1rem;
+              color: white;
+              padding: 0.75rem 1rem;
+              text-transform: uppercase;
+              letter-spacing: 0.5px;
+              transition: color 0.3s ease;
+            " class="total-label">Total Amount</td>
+            <td class="right amount total-amount" style="
+              font-weight: 700;
+              font-size: 1.1rem;
+              color: white;
+              padding: 0.75rem 1rem;
+              text-align: right;
+              text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+              transition: color 0.3s ease;
+            ">--</td>
           </tr>
         </table>
 
