refactor(invoice): update invoice summary links and remove deprecated files
- Change the link in the invoice summary from "newInvoice.html" to "revisedInvoice.html" for better clarity.
- Remove the obsolete "newInvoice.html" file along with its associated CSS and JavaScript files to streamline the project structure.
- Ensure that the invoice summary page now correctly directs users to the revised invoice section.

--- a/invoiceSummary.html
+++ b/invoiceSummary.html
@@ -1105,7 +1105,7 @@
                     <i class="bi bi-lightbulb" style="color:#f59e42;"></i>
                     Accept all recommendations and generate a revised invoice.
                   </div>
-                  <a href="newInvoice.html" class="btn btn-outline-primary">See Revised Invoice</a>
+                  <a href="revisedInvoice.html" class="btn btn-outline-primary">See Revised Invoice</a>
                 </div>
 
               </div>
