--- a/revisedInvoice.html
+++ b/revisedInvoice.html
@@ -15,7 +15,7 @@
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="src/css/main.css">
-  <link rel="stylesheet" href="src/css/newInvoice.css">
+  <link rel="stylesheet" href="src/css/revisedInvoice.css">
 </head>
 
 <body>
@@ -409,7 +409,7 @@
   <!-- Bootstrap JS Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Custom JS -->
-  <script src="src/js/newInvoice.js"></script>
+  <script src="src/js/revisedInvoice.js"></script>
 </body>
 
 </html>
