--- a/index.html
+++ b/index.html
@@ -280,46 +280,44 @@
         <div class="row g-3 mb-1">
           <!-- Timeliness Chart (full row) -->
           <div class="col-12">
-            <div class="chart-container mb-3">
-              <div class="chart-header mb-2 d-flex justify-content-between align-items-center">
+            <div class="chart-container mb-3" style="background: white; border-radius: 1rem; box-shadow: 0 2px 12px #0001; padding: 1.25rem;">
+              <div class="chart-header mb-3 d-flex justify-content-between align-items-center">
                 <div class="d-flex align-items-center gap-3">
-                  <h2 class="chart-title d-flex align-items-center m-0">
-                    <i class="bi bi-graph-up me-2"></i>
+                  <h2 class="chart-title d-flex align-items-center m-0" style="font-size: 1.1rem; font-weight: 600; color: #1e293b;">
+                    <i class="bi bi-graph-up me-2" style="color: #6366f1;"></i>
                     Timeliness
                   </h2>
                   <div class="chart-legend d-flex border-start ps-3">
                     <div class="legend-item d-flex align-items-center me-3">
-                      <span class="legend-dot d-inline-block me-1"
-                        style="width:6px;height:6px;border-radius:50%;background:var(--primary-color)"></span>
-                      <span class="small">Monthly</span>
+                      <span class="legend-dot d-inline-block me-1" style="width:8px;height:8px;border-radius:50%;background:#6366f1"></span>
+                      <span class="small" style="color: #64748b;">Monthly</span>
                     </div>
                     <div class="legend-item d-flex align-items-center">
-                      <span class="legend-dot d-inline-block me-1"
-                        style="width:6px;height:6px;border-radius:50%;background:var(--success-color)"></span>
-                      <span class="small">Trend</span>
+                      <span class="legend-dot d-inline-block me-1" style="width:8px;height:8px;border-radius:50%;background:#10b981"></span>
+                      <span class="small" style="color: #64748b;">Trend</span>
                     </div>
                   </div>
                 </div>
-                <div class="chart-actions d-flex gap-1">
-                  <button class="chart-action-btn" title="Download">
+                <div class="chart-actions d-flex gap-2">
+                  <button class="chart-action-btn" title="Download" style="width: 32px; height: 32px; border-radius: 8px; border: 1px solid #e2e8f0; background: white; color: #64748b; display: flex; align-items: center; justify-content: center; transition: all 0.2s;">
                     <i class="bi bi-download"></i>
                   </button>
-                  <button class="chart-action-btn" title="Refresh">
+                  <button class="chart-action-btn" title="Refresh" style="width: 32px; height: 32px; border-radius: 8px; border: 1px solid #e2e8f0; background: white; color: #64748b; display: flex; align-items: center; justify-content: center; transition: all 0.2s;">
                     <i class="bi bi-arrow-repeat"></i>
                   </button>
                 </div>
               </div>
 
-              <div class="row g-2 mb-2">
+              <div class="row g-3 mb-3">
                 <div class="col-4">
-                  <div class="bg-light rounded p-2 h-100 d-flex flex-column">
+                  <div class="bg-light rounded-3 p-3 h-100 d-flex flex-column" style="background: #f8fafc !important; border: 1px solid #e2e8f0;">
                     <div class="d-flex justify-content-between align-items-center mb-2">
                       <span class="small text-muted fw-medium">Average</span>
                     </div>
                     <div class="mt-auto">
                       <div class="d-flex align-items-baseline">
-                        <span class="h4 mb-0 fw-semibold">48.6</span>
-                        <span class="ms-2 px-2 py-1 rounded-pill small fw-medium" style="background: rgba(25, 135, 84, 0.1); color: #198754;">
+                        <span class="h4 mb-0 fw-semibold" style="color: #1e293b;">48.6</span>
+                        <span class="ms-2 px-2 py-1 rounded-pill small fw-medium" style="background: rgba(25, 135, 84, 0.1); color: #15803d;">
                           <i class="bi bi-arrow-up-right me-1"></i>+15.3%
                         </span>
                       </div>
@@ -328,15 +326,15 @@
                   </div>
                 </div>
                 <div class="col-4">
-                  <div class="bg-light rounded p-2 h-100 d-flex flex-column">
+                  <div class="bg-light rounded-3 p-3 h-100 d-flex flex-column" style="background: #f8fafc !important; border: 1px solid #e2e8f0;">
                     <div class="d-flex justify-content-between align-items-center mb-2">
                       <span class="small text-muted fw-medium">Peak</span>
-                      <span class="badge bg-primary-subtle text-primary rounded-pill px-2 py-1">Jun'23</span>
+                      <span class="badge bg-primary-subtle text-primary rounded-pill px-2 py-1" style="background: rgba(99, 102, 241, 0.1) !important; color: #6366f1 !important;">Jun'23</span>
                     </div>
                     <div class="mt-auto">
                       <div class="d-flex align-items-baseline">
-                        <span class="h4 mb-0 fw-semibold">113</span>
-                        <span class="ms-2 px-2 py-1 rounded-pill small fw-medium" style="background: rgba(13, 110, 253, 0.1); color: #0d6efd;">
+                        <span class="h4 mb-0 fw-semibold" style="color: #1e293b;">113</span>
+                        <span class="ms-2 px-2 py-1 rounded-pill small fw-medium" style="background: rgba(99, 102, 241, 0.1); color: #6366f1;">
                           <i class="bi bi-arrow-up-right me-1"></i>+132.5%
                         </span>
                       </div>
@@ -345,13 +343,13 @@
                   </div>
                 </div>
                 <div class="col-4">
-                  <div class="bg-light rounded p-2 h-100 d-flex flex-column">
+                  <div class="bg-light rounded-3 p-3 h-100 d-flex flex-column" style="background: #f8fafc !important; border: 1px solid #e2e8f0;">
                     <div class="d-flex justify-content-between align-items-center mb-2">
                       <span class="small text-muted fw-medium">Latest</span>
                     </div>
                     <div class="mt-auto">
                       <div class="d-flex align-items-baseline">
-                        <span class="h4 mb-0 fw-semibold">50</span>
+                        <span class="h4 mb-0 fw-semibold" style="color: #1e293b;">50</span>
                         <span class="ms-2 px-2 py-1 rounded-pill small fw-medium" style="background: rgba(220, 53, 69, 0.1); color: #dc3545;">
                           <i class="bi bi-arrow-down-right me-1"></i>-33.3%
                         </span>
@@ -362,18 +360,15 @@
                 </div>
               </div>
 
-              <div class="chart-wrapper" style="height: 180px;">
+              <div class="chart-wrapper" style="height: 200px;">
                 <canvas id="timelinessOverviewChart"></canvas>
               </div>
 
-              <div class="chart-footer mt-2 pt-2 border-top">
+              <div class="chart-footer mt-3 pt-3 border-top">
                 <div class="d-flex justify-content-between align-items-center">
-                  <div class="chart-insight small text-muted">
-                    <i class="bi bi-info-circle"></i>
+                  <div class="chart-insight small" style="color: #64748b;">
+                    <i class="bi bi-info-circle me-1"></i>
                     <span>Showing upward trend in recent months</span>
-                  </div>
-                  <div class="small">
-                    <!-- View Details link removed -->
                   </div>
                 </div>
               </div>
@@ -383,78 +378,74 @@
         <div class="row g-3 mb-1">
           <!-- Delay Analysis (half row) -->
           <div class="col-lg-6">
-            <div class="chart-container mb-3" style="min-height: 420px;">
-              <div class="chart-header mb-2 d-flex justify-content-between align-items-center">
-                <h2 class="chart-title d-flex align-items-center m-0">
-                  <i class="bi bi-pie-chart-fill me-2"></i>
+            <div class="chart-container mb-3" style="background: white; border-radius: 1rem; box-shadow: 0 2px 12px #0001; padding: 1.25rem; min-height: 420px;">
+              <div class="chart-header mb-3 d-flex justify-content-between align-items-center">
+                <h2 class="chart-title d-flex align-items-center m-0" style="font-size: 1.1rem; font-weight: 600; color: #1e293b;">
+                  <i class="bi bi-pie-chart-fill me-2" style="color: #6366f1;"></i>
                   Delay Analysis
                 </h2>
-                <div class="chart-actions d-flex gap-1">
-                  <button class="chart-action-btn" title="Download">
+                <div class="chart-actions d-flex gap-2">
+                  <button class="chart-action-btn" title="Download" style="width: 32px; height: 32px; border-radius: 8px; border: 1px solid #e2e8f0; background: white; color: #64748b; display: flex; align-items: center; justify-content: center; transition: all 0.2s;">
                     <i class="bi bi-download"></i>
                   </button>
-                  <button class="chart-action-btn" title="Refresh">
+                  <button class="chart-action-btn" title="Refresh" style="width: 32px; height: 32px; border-radius: 8px; border: 1px solid #e2e8f0; background: white; color: #64748b; display: flex; align-items: center; justify-content: center; transition: all 0.2s;">
                     <i class="bi bi-arrow-repeat"></i>
                   </button>
                 </div>
               </div>
 
-              <div class="row g-2 mb-2">
+              <div class="row g-3 mb-3">
                 <div class="col-6">
-                  <div class="bg-light rounded p-2">
+                  <div class="bg-light rounded-3 p-3" style="background: #f8fafc !important; border: 1px solid #e2e8f0;">
                     <div class="d-flex justify-content-between align-items-center mb-1">
                       <span class="small text-muted">Total Delays</span>
-                      <span class="badge bg-danger-subtle text-danger">+15.2%</span>
+                      <span class="badge rounded-pill px-2 py-1" style="background: rgba(220, 53, 69, 0.1); color: #dc3545;">+15.2%</span>
                     </div>
-                    <div class="h5 mb-0">110</div>
+                    <div class="h5 mb-0" style="color: #1e293b;">110</div>
                   </div>
                 </div>
                 <div class="col-6">
-                  <div class="bg-light rounded p-2">
+                  <div class="bg-light rounded-3 p-3" style="background: #f8fafc !important; border: 1px solid #e2e8f0;">
                     <div class="d-flex justify-content-between align-items-center mb-1">
                       <span class="small text-muted">Most Common</span>
-                      <span class="badge bg-primary-subtle text-primary">41%</span>
+                      <span class="badge rounded-pill px-2 py-1" style="background: rgba(99, 102, 241, 0.1); color: #6366f1;">41%</span>
                     </div>
-                    <div class="h5 mb-0">Capacity</div>
+                    <div class="h5 mb-0" style="color: #1e293b;">Capacity</div>
                   </div>
                 </div>
               </div>
 
-              <div class="row g-2">
+              <div class="row g-3">
                 <div class="col-lg-6">
                   <div class="chart-wrapper" style="height: 180px;">
                     <canvas id="delayReasonsOverviewChart"></canvas>
                   </div>
                 </div>
                 <div class="col-lg-6">
-                  <div class="delay-stats bg-light rounded">
-                    <div class="delay-item d-flex align-items-center p-2 border-bottom">
-                      <div class="delay-color me-2" style="width:8px;height:8px;border-radius:50%;background:#4f46e5">
-                      </div>
-                      <div class="delay-name flex-grow-1 small">Capacity</div>
-                      <div class="delay-value small fw-medium">45</div>
-                      <div class="delay-percent ms-2 small text-muted">41%</div>
+                  <div class="delay-stats bg-light rounded-3" style="background: #f8fafc !important; border: 1px solid #e2e8f0;">
+                    <div class="delay-item d-flex align-items-center p-3 border-bottom" style="border-color: #e2e8f0 !important;">
+                      <div class="delay-color me-2" style="width:8px;height:8px;border-radius:50%;background:#6366f1"></div>
+                      <div class="delay-name flex-grow-1 small" style="color: #64748b;">Capacity</div>
+                      <div class="delay-value small fw-medium" style="color: #1e293b;">45</div>
+                      <div class="delay-percent ms-2 small" style="color: #64748b;">41%</div>
                     </div>
-                    <div class="delay-item d-flex align-items-center p-2 border-bottom">
-                      <div class="delay-color me-2" style="width:8px;height:8px;border-radius:50%;background:#10b981">
-                      </div>
-                      <div class="delay-name flex-grow-1 small">Customer</div>
-                      <div class="delay-value small fw-medium">30</div>
-                      <div class="delay-percent ms-2 small text-muted">27%</div>
+                    <div class="delay-item d-flex align-items-center p-3 border-bottom" style="border-color: #e2e8f0 !important;">
+                      <div class="delay-color me-2" style="width:8px;height:8px;border-radius:50%;background:#10b981"></div>
+                      <div class="delay-name flex-grow-1 small" style="color: #64748b;">Customer</div>
+                      <div class="delay-value small fw-medium" style="color: #1e293b;">30</div>
+                      <div class="delay-percent ms-2 small" style="color: #64748b;">27%</div>
                     </div>
-                    <div class="delay-item d-flex align-items-center p-2 border-bottom">
-                      <div class="delay-color me-2" style="width:8px;height:8px;border-radius:50%;background:#f59e0b">
-                      </div>
-                      <div class="delay-name flex-grow-1 small">Volume</div>
-                      <div class="delay-value small fw-medium">14</div>
-                      <div class="delay-percent ms-2 small text-muted">13%</div>
+                    <div class="delay-item d-flex align-items-center p-3 border-bottom" style="border-color: #e2e8f0 !important;">
+                      <div class="delay-color me-2" style="width:8px;height:8px;border-radius:50%;background:#f59e0b"></div>
+                      <div class="delay-name flex-grow-1 small" style="color: #64748b;">Volume</div>
+                      <div class="delay-value small fw-medium" style="color: #1e293b;">14</div>
+                      <div class="delay-percent ms-2 small" style="color: #64748b;">13%</div>
                     </div>
-                    <div class="delay-item d-flex align-items-center p-2">
-                      <div class="delay-color me-2" style="width:8px;height:8px;border-radius:50%;background:#6b7280">
-                      </div>
-                      <div class="delay-name flex-grow-1 small">Other</div>
-                      <div class="delay-value small fw-medium">21</div>
-                      <div class="delay-percent ms-2 small text-muted">19%</div>
+                    <div class="delay-item d-flex align-items-center p-3">
+                      <div class="delay-color me-2" style="width:8px;height:8px;border-radius:50%;background:#6b7280"></div>
+                      <div class="delay-name flex-grow-1 small" style="color: #64748b;">Other</div>
+                      <div class="delay-value small fw-medium" style="color: #1e293b;">21</div>
+                      <div class="delay-percent ms-2 small" style="color: #64748b;">19%</div>
                     </div>
                   </div>
                 </div>
@@ -464,25 +455,25 @@
 
           <!-- Contract (half row) -->
           <div class="col-lg-6">
-            <div class="chart-container mb-3 contract-compact" style="min-height: 420px; padding: 1rem 1rem 0.5rem 1rem; border-radius: 1rem; box-shadow: 0 2px 12px #0001;">
-              <div class="chart-header mb-2 d-flex justify-content-between align-items-center">
-                <h2 class="chart-title d-flex align-items-center m-0">
+            <div class="chart-container mb-3" style="background: white; border-radius: 1rem; box-shadow: 0 2px 12px #0001; padding: 1.25rem; min-height: 420px;">
+              <div class="chart-header mb-3 d-flex justify-content-between align-items-center">
+                <h2 class="chart-title d-flex align-items-center m-0" style="font-size: 1.1rem; font-weight: 600; color: #1e293b;">
                   <i class="bi bi-people-fill me-2" style="color: #6366f1;"></i>
                   Contract
                 </h2>
-                <div class="chart-actions d-flex gap-1">
-                  <button class="chart-action-btn" title="Download">
+                <div class="chart-actions d-flex gap-2">
+                  <button class="chart-action-btn" title="Download" style="width: 32px; height: 32px; border-radius: 8px; border: 1px solid #e2e8f0; background: white; color: #64748b; display: flex; align-items: center; justify-content: center; transition: all 0.2s;">
                     <i class="bi bi-download"></i>
                   </button>
-                  <button class="chart-action-btn" title="Refresh">
+                  <button class="chart-action-btn" title="Refresh" style="width: 32px; height: 32px; border-radius: 8px; border: 1px solid #e2e8f0; background: white; color: #64748b; display: flex; align-items: center; justify-content: center; transition: all 0.2s;">
                     <i class="bi bi-arrow-repeat"></i>
                   </button>
                 </div>
               </div>
-              <div class="chart-wrapper" style="height: 180px;">
+              <div class="chart-wrapper" style="height: 200px;">
                 <canvas id="contractStatusChart"></canvas>
               </div>
-              <div id="contractSummary" class="contract-summary-compact mt-3" style="background: #f8fafc; border-radius: 0.75rem; padding: 0.5rem; font-size: 0.91em; display: flex; flex-wrap: wrap; gap: 0.4rem; align-items: center; justify-content: flex-start; border: 1px solid #e2e8f0;">
+              <div id="contractSummary" class="contract-summary mt-3" style="background: #f8fafc; border-radius: 0.75rem; padding: 0.75rem; font-size: 0.91em; display: flex; flex-wrap: wrap; gap: 0.5rem; align-items: center; justify-content: flex-start; border: 1px solid #e2e8f0;">
                 <!-- Summary content will be injected by JS -->
               </div>
             </div>
