style(invoice): update invoice header and refine CSS for improved readability
- Change header text from "Final Invoice" to "Draft Invoice" to reflect the current status.
- Adjust CSS styles for tables and text elements, including padding and font sizes, to enhance overall readability and user experience.
- Implement consistent styling for buttons and layout elements to maintain a modern look.

--- a/invoiceCreation.html
+++ b/invoiceCreation.html
@@ -329,12 +329,12 @@
                       font-weight: 600;
                       color: #1e293b;
                       letter-spacing: -0.01em;
-                    ">Final Invoice</h2>
+                    ">Draft Invoice</h2>
                     <p class="mb-0" style="
                       font-size: 0.875rem;
                       color: #64748b;
                       font-weight: 500;
-                    ">Review and submit invoice for processing</p>
+                    ">Review and submit invoice</p>
                   </div>
                   
                 </div>
