--- a/invoiceCreation.html
+++ b/invoiceCreation.html
@@ -399,7 +399,9 @@
                   <tr>
                     <td>DELTA</td>
                     <td>10001</td>
-                    <td>TBD</td>
+                    <td>
+                      <input type="text" class="form-control form-control-sm" placeholder="Enter invoice number">
+                    </td>
                     <td>05-05-2025</td>
                     <td>1</td>
                   </tr>
@@ -429,7 +431,9 @@
                       </div>
                     </td>
                     <td>10270200</td>
-                    <td colspan="2"></td>
+                    <td colspan="2">
+                      <textarea class="form-control form-control-sm notification-textarea" placeholder="Enter notification details" rows="3"></textarea>
+                    </td>
                   </tr>
                   <tr>
                     <th>Payment Terms</th>
@@ -440,10 +444,18 @@
                   </tr>
                   <tr>
                     <td>30 DAYS FROM INV DATE</td>
-                    <td></td>
-                    <td>TBD</td>
-                    <td>TBD</td>
-                    <td></td>
+                    <td>
+                      <input type="date" class="form-control form-control-sm">
+                    </td>
+                    <td>
+                      <input type="text" class="form-control form-control-sm" placeholder="Enter shipping reference">
+                    </td>
+                    <td>
+                      <input type="date" class="form-control form-control-sm">
+                    </td>
+                    <td>
+                      <input type="text" class="form-control form-control-sm" placeholder="Enter WBS">
+                    </td>
                   </tr>
                 </table>
 
@@ -459,31 +471,45 @@
                   </tr>
                   <tr>
                     <td>In-Scope CharBEs</td>
-                    <td class="right amount">--</td>
+                    <td class="right">
+                      <input type="text" class="form-control form-control-sm amount-input" placeholder="Enter amount">
+                    </td>
                   </tr>
                   <tr>
                     <td>Out-Of-Scope LLPs Replacement</td>
-                    <td class="right amount">--</td>
+                    <td class="right">
+                      <input type="text" class="form-control form-control-sm amount-input" placeholder="Enter amount">
+                    </td>
                   </tr>
                   <tr>
                     <td>Out-Of Scope QEC & LRU Replacement</td>
-                    <td class="right amount">--</td>
+                    <td class="right">
+                      <input type="text" class="form-control form-control-sm amount-input" placeholder="Enter amount">
+                    </td>
                   </tr>
                   <tr>
                     <td>Out-of-Scope Material & Repair</td>
-                    <td class="right amount">--</td>
+                    <td class="right">
+                      <input type="text" class="form-control form-control-sm amount-input" placeholder="Enter amount">
+                    </td>
                   </tr>
                   <tr>
                     <td>Out-of-Scope PMA & DER</td>
-                    <td class="right amount">--</td>
+                    <td class="right">
+                      <input type="text" class="form-control form-control-sm amount-input" placeholder="Enter amount">
+                    </td>
                   </tr>
                   <tr>
                     <td>Out-Of Scope Missing Items</td>
-                    <td class="right amount">--</td>
+                    <td class="right">
+                      <input type="text" class="form-control form-control-sm amount-input" placeholder="Enter amount">
+                    </td>
                   </tr>
                   <tr>
                     <td>Out-Of Scope Service Bulletin</td>
-                    <td class="right amount">--</td>
+                    <td class="right">
+                      <input type="text" class="form-control form-control-sm amount-input" placeholder="Enter amount">
+                    </td>
                   </tr>
                   <tr>
                     <td>Stand repair</td>
@@ -491,11 +517,15 @@
                   </tr>
                   <tr>
                     <td>Excluded Material Transportation</td>
-                    <td class="right amount">--</td>
+                    <td class="right">
+                      <input type="text" class="form-control form-control-sm amount-input" placeholder="Enter amount">
+                    </td>
                   </tr>
                   <tr>
                     <td>Taxes</td>
-                    <td class="right amount">--</td>
+                    <td class="right">
+                      <input type="text" class="form-control form-control-sm amount-input" placeholder="Enter amount">
+                    </td>
                   </tr>
                   <tr>
                     <td>TAT remedy</td>
@@ -510,7 +540,9 @@
                   </tr>
                   <tr class="total-row">
                     <td class="total-label">Total Amount</td>
-                    <td class="right amount total-amount">--</td>
+                    <td class="right">
+                      <input type="text" class="form-control form-control-sm amount-input total-amount" placeholder="Enter total">
+                    </td>
                   </tr>
                 </table>
 
