style(invoice): adjust notification textarea and enhance table cell styling for improved layout
- Modify the notification textarea to increase its height for better usability and visibility of input.
- Update CSS for table cells to ensure consistent height and padding, enhancing the overall layout and user experience.

--- a/invoiceCreation.html
+++ b/invoiceCreation.html
@@ -432,7 +432,7 @@
                     </td>
                     <td>10270200</td>
                     <td colspan="2">
-                      <textarea class="form-control form-control-sm notification-textarea" placeholder="Enter notification details" rows="3"></textarea>
+                      <textarea style="height: 100%;" class="form-control form-control-sm notification-textarea" placeholder="Enter notification details" rows="5"></textarea>
                     </td>
                   </tr>
                   <tr>
