style(invoice): update invoice header description for clarity
- Modify the invoice header description to remove redundancy, focusing on key actions for users.
- Enhance the overall clarity of the message to improve user understanding of the invoice management process.

--- a/partLevel.html
+++ b/partLevel.html
@@ -162,7 +162,7 @@
             Invoice Summary & Recommendation
           </div>
           <div class="plv-header-desc">
-            Monitor invoice status, review recommendations, and take action on flagged items.
+            Review recommendations, and take action on flagged items.
           </div>
         </div>
         
