refactor(shop): update action buttons to use anchor tags for improved navigation
- Change the action buttons in shop.html to anchor tags for better semantic structure and navigation.
- Update the links to point to the invoice summary and creation pages, enhancing user experience and accessibility.

--- a/shop.html
+++ b/shop.html
@@ -722,14 +722,14 @@
                 </div>
                 <div class="card-body">
                   <div class="action-buttons">
-                    <button class="btn btn-primary" id="reviewInvoiceBtn">
+                    <a href="invoiceSummary.html" class="btn btn-primary" id="reviewInvoiceBtn">
                       <i class="bi bi-eye"></i>
                       Review Invoice
-                    </button>
-                    <button class="btn btn-success" id="createInvoiceBtn" style="display: none;">
+                    </a>
+                    <a href="invoiceCreation.html" class="btn btn-success" id="createInvoiceBtn" style="display: none;">
                       <i class="bi bi-plus-circle"></i>
                       Create Invoice
-                    </button>
+                    </a>
                   </div>
                 </div>
               </div>
