--- a/index.html
+++ b/index.html
@@ -489,9 +489,274 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  
+  <!-- Chatbot HTML -->
+  <div class="chatbot" id="chatbot">
+    <div class="chatbot-header">
+      <div class="chatbot-title">
+        <i class="bi bi-chat-dots"></i>
+        <span>SMBA Assistant</span>
+      </div>
+      <div class="chatbot-actions">
+        <button id="chatbot-minimize" class="chatbot-action-btn" title="Minimize">
+          <i class="bi bi-dash"></i>
+        </button>
+        <button id="chatbot-maximize" class="chatbot-action-btn" title="Maximize">
+          <i class="bi bi-arrows-angle-expand"></i>
+        </button>
+        <button id="chatbot-fullscreen" class="chatbot-action-btn" title="Fullscreen">
+          <i class="bi bi-fullscreen"></i>
+        </button>
+        <button id="chatbot-close" class="chatbot-action-btn" title="Close">
+          <i class="bi bi-x"></i>
+        </button>
+      </div>
+    </div>
+    <div class="chatbot-body">
+      <div class="chatbot-messages" id="chatbot-messages">
+        <div class="chatbot-message bot">
+          <div class="chatbot-message-content">
+            <p>Hello! I'm your SMBA Assistant. How can I help you today?</p>
+          </div>
+          <div class="chatbot-message-time">Just now</div>
+        </div>
+      </div>
+      <div class="chatbot-input-container">
+        <input type="text" id="chatbot-input" class="chatbot-input" placeholder="Type your message...">
+        <button id="chatbot-send" class="chatbot-send-btn">
+          <i class="bi bi-send"></i>
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <button id="chatbot-trigger" class="chatbot-trigger">
+    <i class="bi bi-chat-dots"></i>
+  </button>
+
   <!-- Custom JS -->
   <script src="src/js/script.js"></script>
   <script src="src/js/index.js"></script>
+  <script src="src/js/chatbot.js"></script>
+
+  <style>
+    /* Chatbot Styles */
+    .chatbot {
+      position: fixed;
+      bottom: 80px;
+      right: 20px;
+      width: 350px;
+      height: 450px;
+      background-color: #fff;
+      border-radius: 1rem;
+      box-shadow: 0 5px 25px rgba(0, 0, 0, 0.15);
+      display: flex;
+      flex-direction: column;
+      z-index: 9999;
+      overflow: hidden;
+      transition: all 0.3s ease;
+      transform: translateY(20px);
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    .chatbot.active {
+      transform: translateY(0);
+      opacity: 1;
+      pointer-events: all;
+    }
+
+    .chatbot.minimized {
+      height: 60px;
+      overflow: hidden;
+    }
+
+    .chatbot.maximized {
+      width: 90%;
+      height: 80%;
+      bottom: 10%;
+      right: 5%;
+    }
+
+    .chatbot.fullscreen {
+      width: 100%;
+      height: 100%;
+      bottom: 0;
+      right: 0;
+      border-radius: 0;
+    }
+
+    .chatbot-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px;
+      background-color: #6366f1;
+      color: white;
+      border-top-left-radius: 1rem;
+      border-top-right-radius: 1rem;
+    }
+
+    .chatbot.fullscreen .chatbot-header {
+      border-radius: 0;
+    }
+
+    .chatbot-title {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      font-weight: 600;
+    }
+
+    .chatbot-actions {
+      display: flex;
+      gap: 5px;
+    }
+
+    .chatbot-action-btn {
+      background: transparent;
+      border: none;
+      color: white;
+      width: 24px;
+      height: 24px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background-color 0.2s;
+    }
+
+    .chatbot-action-btn:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+    }
+
+    .chatbot-body {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+    }
+
+    .chatbot-messages {
+      flex: 1;
+      padding: 15px;
+      overflow-y: auto;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+
+    .chatbot-message {
+      max-width: 80%;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .chatbot-message.user {
+      align-self: flex-end;
+    }
+
+    .chatbot-message.bot {
+      align-self: flex-start;
+    }
+
+    .chatbot-message-content {
+      padding: 10px 15px;
+      border-radius: 1rem;
+      background-color: #f1f5f9;
+    }
+
+    .chatbot-message.user .chatbot-message-content {
+      background-color: #6366f1;
+      color: white;
+      border-bottom-right-radius: 4px;
+    }
+
+    .chatbot-message.bot .chatbot-message-content {
+      background-color: #f1f5f9;
+      color: #1e293b;
+      border-bottom-left-radius: 4px;
+    }
+
+    .chatbot-message-content p {
+      margin: 0;
+    }
+
+    .chatbot-message-time {
+      font-size: 0.7rem;
+      color: #94a3b8;
+      margin-top: 5px;
+      padding: 0 5px;
+    }
+
+    .chatbot-input-container {
+      display: flex;
+      padding: 15px;
+      border-top: 1px solid #e2e8f0;
+    }
+
+    .chatbot-input {
+      flex: 1;
+      padding: 10px 15px;
+      border: 1px solid #e2e8f0;
+      border-radius: 0.5rem;
+      outline: none;
+      font-size: 0.9rem;
+    }
+
+    .chatbot-input:focus {
+      border-color: #6366f1;
+    }
+
+    .chatbot-send-btn {
+      background-color: #6366f1;
+      color: white;
+      border: none;
+      width: 40px;
+      height: 40px;
+      border-radius: 0.5rem;
+      margin-left: 10px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: background-color 0.2s;
+    }
+
+    .chatbot-send-btn:hover {
+      background-color: #4f46e5;
+    }
+
+    .chatbot-trigger {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background-color: #6366f1;
+      color: white;
+      border: none;
+      box-shadow: 0 4px 12px rgba(99, 102, 241, 0.3);
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.2rem;
+      z-index: 9998;
+      transition: transform 0.3s ease, background-color 0.2s;
+    }
+
+    .chatbot-trigger:hover {
+      background-color: #4f46e5;
+      transform: scale(1.05);
+    }
+
+    .chatbot-trigger.active {
+      transform: scale(0.9);
+    }
+  </style>
 </body>
 
 </html>
