feat(chatbot): enhance chatbot functionality and styling
- Implement new CSS styles for the chatbot, including animations and improved layout for better user interaction.
- Update JavaScript to streamline chatbot behavior, removing the minimize feature and enhancing message processing with dynamic responses.
- Add typing indicators and message landing animations to improve user experience during interactions.
- Refactor existing code for clarity and maintainability, ensuring a more responsive and visually appealing chatbot interface.

--- a/invoiceCreation.html
+++ b/invoiceCreation.html
@@ -210,7 +210,7 @@
                       <div class="accordion-item">
                         <h4 class="accordion-header" id="termSheetHeading">
                           <button class="accordion-button py-2" type="button" data-bs-toggle="collapse" data-bs-target="#termSheetCollapse" aria-expanded="true" aria-controls="termSheetCollapse">
-                            a. Term Sheet
+                            Term Sheet
                           </button>
                         </h4>
                         <div id="termSheetCollapse" class="accordion-collapse collapse show" aria-labelledby="termSheetHeading">
@@ -251,7 +251,7 @@
                       <div class="accordion-item">
                         <h4 class="accordion-header" id="pricingHeading">
                           <button class="accordion-button collapsed py-2" type="button" data-bs-toggle="collapse" data-bs-target="#pricingCollapse" aria-expanded="false" aria-controls="pricingCollapse">
-                            b. Pricing
+                            Pricing
                           </button>
                         </h4>
                         <div id="pricingCollapse" class="accordion-collapse collapse" aria-labelledby="pricingHeading">
@@ -297,7 +297,7 @@
                       <div class="accordion-item">
                         <h4 class="accordion-header" id="conditionsHeading">
                           <button class="accordion-button collapsed py-2" type="button" data-bs-toggle="collapse" data-bs-target="#conditionsCollapse" aria-expanded="false" aria-controls="conditionsCollapse">
-                            c. Conditions/Limitations
+                            Conditions/Limitations
                           </button>
                         </h4>
                         <div id="conditionsCollapse" class="accordion-collapse collapse" aria-labelledby="conditionsHeading">
@@ -338,7 +338,7 @@
                       <div class="accordion-item">
                         <h4 class="accordion-header" id="workScopeHeading">
                           <button class="accordion-button collapsed py-2" type="button" data-bs-toggle="collapse" data-bs-target="#workScopeCollapse" aria-expanded="false" aria-controls="workScopeCollapse">
-                            d. Work Scope
+                            Work Scope
                           </button>
                         </h4>
                         <div id="workScopeCollapse" class="accordion-collapse collapse" aria-labelledby="workScopeHeading">
@@ -379,7 +379,7 @@
                       <div class="accordion-item">
                         <h4 class="accordion-header" id="guaranteesHeading">
                           <button class="accordion-button collapsed py-2" type="button" data-bs-toggle="collapse" data-bs-target="#guaranteesCollapse" aria-expanded="false" aria-controls="guaranteesCollapse">
-                            e. Guarantees
+                            Guarantees
                           </button>
                         </h4>
                         <div id="guaranteesCollapse" class="accordion-collapse collapse" aria-labelledby="guaranteesHeading">
@@ -420,7 +420,7 @@
                       <div class="accordion-item">
                         <h4 class="accordion-header" id="invoicingHeading">
                           <button class="accordion-button collapsed py-2" type="button" data-bs-toggle="collapse" data-bs-target="#invoicingCollapse" aria-expanded="false" aria-controls="invoicingCollapse">
-                            f. Invoicing & Payment Terms
+                            Invoicing & Payment Terms
                           </button>
                         </h4>
                         <div id="invoicingCollapse" class="accordion-collapse collapse" aria-labelledby="invoicingHeading">
