refactor(index.html, css): remove aviation theme and enhance card styles
- Delete the aviation-theme.css file to streamline styles and reduce redundancy.
- Update index.html to remove references to the aviation theme, improving organization.
- Revise card styles in index.css to enhance layout and responsiveness, including adjustments to hover effects and content positioning.
- Introduce new background elements for content cards to maintain visual appeal without the aviation theme.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="src/css/main.css">
   <link rel="stylesheet" href="src/css/index.css">
-  <link rel="stylesheet" href="src/css/aviation-theme.css">
   <link rel="stylesheet" href="src/css/chatbot.css">
 </head>
 
@@ -311,59 +310,54 @@
               </div>
 
               <div class="row g-3 mb-3">
-                <div class="col-4">
-                  <div class="bg-light rounded-3 p-3 h-100 d-flex flex-column" style="background: #f8fafc !important; border: 1px solid #e2e8f0;">
-                    <div class="d-flex justify-content-between align-items-center mb-2">
-                      <span class="small text-muted fw-medium">Average</span>
-                    </div>
-                    <div class="mt-auto">
+                <div class="col-lg-9">
+                  <div class="chart-wrapper" style="height: 200px;">
+                    <canvas id="timelinessOverviewChart"></canvas>
+                  </div>
+                </div>
+                <div class="col-lg-3">
+                  <div class="d-flex flex-column gap-2">
+                    <div class="bg-light rounded-3 p-2" style="background: #f8fafc !important; border: 1px solid #e2e8f0;">
+                      <div class="d-flex justify-content-between align-items-center mb-1">
+                        <span class="small text-muted fw-medium" style="font-size: 0.75rem;">Average</span>
+                      </div>
                       <div class="d-flex align-items-baseline">
-                        <span class="h4 mb-0 fw-semibold" style="color: #1e293b;">48.6</span>
-                        <span class="ms-2 px-2 py-1 rounded-pill small fw-medium" style="background: rgba(25, 135, 84, 0.1); color: #15803d;">
+                        <span class="h5 mb-0 fw-semibold" style="color: #1e293b;">48.6</span>
+                        <span class="ms-2 px-1 py-0 rounded-pill small fw-medium" style="background: rgba(25, 135, 84, 0.1); color: #15803d; font-size: 0.7rem;">
                           <i class="bi bi-arrow-up-right me-1"></i>+15.3%
                         </span>
                       </div>
-                      <div class="small text-muted mt-1">vs last month</div>
+                      <div class="small text-muted" style="font-size: 0.7rem;">vs last month</div>
                     </div>
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="bg-light rounded-3 p-3 h-100 d-flex flex-column" style="background: #f8fafc !important; border: 1px solid #e2e8f0;">
-                    <div class="d-flex justify-content-between align-items-center mb-2">
-                      <span class="small text-muted fw-medium">Peak</span>
-                      <span class="badge bg-primary-subtle text-primary rounded-pill px-2 py-1" style="background: rgba(99, 102, 241, 0.1) !important; color: #6366f1 !important;">Jun'23</span>
-                    </div>
-                    <div class="mt-auto">
+
+                    <div class="bg-light rounded-3 p-2" style="background: #f8fafc !important; border: 1px solid #e2e8f0;">
+                      <div class="d-flex justify-content-between align-items-center mb-1">
+                        <span class="small text-muted fw-medium" style="font-size: 0.75rem;">Peak</span>
+                        <span class="badge bg-primary-subtle text-primary rounded-pill px-1 py-0" style="background: rgba(99, 102, 241, 0.1) !important; color: #6366f1 !important; font-size: 0.7rem;">Jun'23</span>
+                      </div>
                       <div class="d-flex align-items-baseline">
-                        <span class="h4 mb-0 fw-semibold" style="color: #1e293b;">113</span>
-                        <span class="ms-2 px-2 py-1 rounded-pill small fw-medium" style="background: rgba(99, 102, 241, 0.1); color: #6366f1;">
+                        <span class="h5 mb-0 fw-semibold" style="color: #1e293b;">113</span>
+                        <span class="ms-2 px-1 py-0 rounded-pill small fw-medium" style="background: rgba(99, 102, 241, 0.1); color: #6366f1; font-size: 0.7rem;">
                           <i class="bi bi-arrow-up-right me-1"></i>+132.5%
                         </span>
                       </div>
-                      <div class="small text-muted mt-1">highest recorded</div>
+                      <div class="small text-muted" style="font-size: 0.7rem;">highest recorded</div>
                     </div>
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="bg-light rounded-3 p-3 h-100 d-flex flex-column" style="background: #f8fafc !important; border: 1px solid #e2e8f0;">
-                    <div class="d-flex justify-content-between align-items-center mb-2">
-                      <span class="small text-muted fw-medium">Latest</span>
-                    </div>
-                    <div class="mt-auto">
+
+                    <div class="bg-light rounded-3 p-2" style="background: #f8fafc !important; border: 1px solid #e2e8f0;">
+                      <div class="d-flex justify-content-between align-items-center mb-1">
+                        <span class="small text-muted fw-medium" style="font-size: 0.75rem;">Latest</span>
+                      </div>
                       <div class="d-flex align-items-baseline">
-                        <span class="h4 mb-0 fw-semibold" style="color: #1e293b;">50</span>
-                        <span class="ms-2 px-2 py-1 rounded-pill small fw-medium" style="background: rgba(220, 53, 69, 0.1); color: #dc3545;">
+                        <span class="h5 mb-0 fw-semibold" style="color: #1e293b;">50</span>
+                        <span class="ms-2 px-1 py-0 rounded-pill small fw-medium" style="background: rgba(220, 53, 69, 0.1); color: #dc3545; font-size: 0.7rem;">
                           <i class="bi bi-arrow-down-right me-1"></i>-33.3%
                         </span>
                       </div>
-                      <div class="small text-muted mt-1">current month</div>
+                      <div class="small text-muted" style="font-size: 0.7rem;">current month</div>
                     </div>
                   </div>
                 </div>
-              </div>
-
-              <div class="chart-wrapper" style="height: 200px;">
-                <canvas id="timelinessOverviewChart"></canvas>
               </div>
 
               <div class="chart-footer mt-3 pt-3 border-top">
