style(partLevel): enhance modal functionality and improve CSS transitions
- Update modal styles to ensure proper display and transitions, including adjustments to opacity and backdrop effects.
- Refactor JavaScript to improve modal initialization and event handling for better user experience.
- Add transitions for detail items and insights sections to enhance visual appeal and interactivity.
- Adjust CSS for responsive design, ensuring consistent layout across different screen sizes.

--- a/partLevel.html
+++ b/partLevel.html
@@ -280,7 +280,7 @@
   <script src="src/js/partLevel.js"></script>
 
   <!-- Details Modal -->
-  <div class="modal fade" id="detailsModal" tabindex="-1" aria-labelledby="detailsModalLabel" aria-hidden="true">
+  <div class="modal fade" id="detailsModal" tabindex="-1" aria-labelledby="detailsModalLabel" aria-hidden="true" style="display: none;">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
